--- a/recommender_backend/requirements.txt
+++ b/recommender_backend/requirements.txt
@@ -1,4 +1,7 @@
-Flask==3.0.3
-Flask-Cors==4.0.1
-numpy==1.26.4
-scikit-learn==1.5.0
+flask
+flask-cors
+numpy
+scikit-learn
+torch
+sentence-transformers
+Pillow
